adl-frontend/src/test/resources/unit/error/semantic/params/Composite1.adl

composite params.Composite1(a, b) {

  contains Primitive1(a, b) as subComp1;
}
